--- a/templates/recipe/product_create.html
+++ b/templates/recipe/product_create.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method='Post'>
-{% csrf_token %}
-{{ form.as_p }}
+
+
+<form action='.' method='POST'>
+    {% csrf_token %}
+    {{ form.as_ul }}
 <input type='submit' value='Save' />
 </form>
 
