--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,13 @@
   </head>
   <body>
     {% include 'nav.html'%}
-
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+          {{ message }}
+        </div>
+      {% endfor %}
+    {% endif %}
     {% block content %}
     <h1>Replacement content</h1>
 
