--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 
 <div class="content-section">
     <form method="POST" action="">
         {% csrf_token %}
-        <fieldset class="form-group">
+        <fieldset class="form-group col-8">
             <legend class="border-bottom mb-4">Create An Account</legend>
-            {{ form.as_p }}
+            {{ form|crispy }}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Register</button>
