login/logout pages working and require login for certain routes.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,10 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<h1>Home Html</h1>
+<h1>HomeHtml</h1>
+
+<div class="container">
+    
+</div>
 
 {% endblock %}
