--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,8 +10,10 @@
             id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#">Recipes <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="#">Browse Recipes <span class="sr-only"></span></a>
                 {% if user.is_authenticated %}
                     <a class="nav-item nav-link"  href="{% url 'logout' %}">Logout</a>
+                    <a class="nav-item nav-link"  href="{% url 'profile' %}" >Profile</a>
                 {% else %}
                     <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                     <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
