Changes to recipe models, user profiles/profile photos

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,7 @@
   <div class="container mt-4">
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand mb-2"
-            href="#">Recipe Maker</a>
+            href="{% url 'home' %}">Recipe Maker</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
