--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -6,8 +6,7 @@
     <div class=" container border-top pt-3">
 
         <div class="content-section">
-            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" style="height: 100px; width: 100px; transform: rotate(0deg);">
-
+            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
             <h2>You have been logged in, {{ user.username }}.</h2>
             <p class="text-secondar"> {{ user.email }}</p>
         </div>
