--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
 
+
+
 {% block content %}
-
-    <h1>{{ object.Dish }}</h1>
-    <h3>Recipe by {{ object.author }} </h3>
-    <p>Ingredients: {{ object.ingredients }}</p>
-    <p>Instructions: {{ object.instruction }}</p>
-    <p>Prep time: {{ object.prep_time }} minutes.</p>
-    <p>Cooking time: {{ object.cooking_time }} minutes</p>
-    <p>Servings: {{ object.servings }}</p>
-    <p>Published on: {{ object.published_date }}</p>
-    <p> </p>
-
+    <div class="content">
+        <!-- Fix this below... the img src  -->
+        <img src="{{ RecipeDetails.photo_1.url}}" alt= "{{object.Dish}}" class="img-fluid">
+        <h1>{{ object.Dish }}</h1>
+        <img  alt="" class="rounded-circle account-img" src="{{ user.profile.image.url }}" style="width: 100px;">
+        <h3>Recipe by {{ object.author }} </h3>
+        <p>Ingredients: {{ object.ingredients }}</p>
+        <p>Instructions: {{ object.instruction }}</p>
+        <p>Prep time: {{ object.prep_time }} minutes.</p>
+        <p>Cooking time: {{ object.cooking_time }} minutes</p>
+        <p>Servings: {{ object.servings }}</p>
+        <p>Published on: {{ object.published_date }}</p>
+        <p> </p>
+    </div>
 {% endblock %}
