--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,9 @@
 
 <div class="container">
     {% for recipes in recipe %}
-        
-       <h1>{{ recipes.Dish }}</h1>
+
+        <!-- Fix this h1's href... can't get to link with class based view :-(    -->
+       <h1> <a class="article-title"> {{ recipes.Dish }}</a> </h1>
        <img src="{{ recipe.photo_1.url }}" alt="">
        <div class="row">
            <!-- Fix this photo placement, wrong src  -->
