working on detail view, currently no active detail views. working on RecipeDetailView in reicpe/views.py, so home.html accepts {% url %}

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     {% for recipes in recipe %}
 
         <!-- Fix this h1's href... can't get to link with class based view :-(    -->
-       <h1> <a class="article-title"> {{ recipes.Dish }}</a> </h1>
+       <h1> <a class="article-title" href="{% url 'recipe-detail' recipe-detail.id %"> {{ recipes.Dish }}</a> </h1>
        <img src="{{ recipe.photo_1.url }}" alt="">
        <div class="row">
            <!-- Fix this photo placement, wrong src  -->
