fixed detailed view url href

--- a/templates/recipe/recipe_list.html
+++ b/templates/recipe/recipe_list.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h1>Hello from 'recipe_list.html' </h1>
+    <h1>test</h1>
     {% for instance in object_list %}
         {{ object.title }}
     {% endfor %}
