--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,7 @@
 <div class="container">
     {% for recipes in recipe %}
 
-        <!-- Fix this h1's href... can't get to link with class based view :-(    -->
-       <h1> <a class="article-title" href="{% url 'recipe-detail' recipe-detail.id %"> {{ recipes.Dish }}</a> </h1>
+       <h1> <a class="article-title" href="{{recipes.get_absolute_url }}"> {{ recipes.Dish }}</a> </h1>
        <img src="{{ recipe.photo_1.url }}" alt="">
        <div class="row">
            <!-- Fix this photo placement, wrong src  -->
