--- a/templates/recipe/product_create.html
+++ b/templates/recipe/product_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<h1>This is a test</h1>
 
 <form action='.' method='POST'>
     {% csrf_token %}
