--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -2,25 +2,34 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-    
-    <div class=" container border-top pt-3">
 
-        <div class="content-section">
-            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-            <h2>You have been logged in, {{ user.username }}.</h2>
-            <p class="text-secondar"> {{ user.email }}</p>
-        </div>
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <fieldset class="form-group col-8">
-                <legend class="border-bottom mb-4">Profile Info</legend>
-                {{ u_form|crispy }}
-                {{ p_form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Update</button>
-            </div>
-        </form>
+<div class=" container border-top pt-3">
+
+    <div class="content-section">
+        <img
+            class="rounded-circle account-img"
+            src="{{ user.profile.image.url }}"
+        >
+        <h2>You have been logged in, {{ user.username }}.</h2>
+        <p class="text-secondar"> {{ user.email }}</p>
     </div>
+    <form
+        method="POST"
+        enctype="multipart/form-data"
+    >
+        {% csrf_token %}
+        <fieldset class="form-group col-8">
+            <legend class="border-bottom mb-4">Profile Info</legend>
+            {{ u_form|crispy }}
+            {{ p_form|crispy }}
+        </fieldset>
+        <div class="form-group">
+            <button
+                class="btn btn-outline-info"
+                type="submit"
+            >Update</button>
+        </div>
+    </form>
+</div>
 
 {% endblock %}
