changes to views(DetailedView, UpdateView, ListView)

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,5 @@
-<div class="card background-primary">
-    <footer class="color-info">
-        footer
-        
-    </footer>
+
+<div class="my-6 container-fluid bg-success w-100">
+ 
+    <h1 class="text-white text-center">Footer</h1>
 </div>
